# athena-agent

./: CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
backend/: Dockerfile  requirements.txt
backend/src/: main.py
backend/src/api/: agents.py  commands.py  health.py  skills.py
backend/src/config/: settings.py
backend/src/services/: agent_orchestrator.py  skill_registry.py
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: mod.rs  search.rs
frontend/: Dockerfile  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: Agents.tsx  Dashboard.tsx  Documentation.tsx  Skills.tsx
frontend/src/styles/: globals.css
frontend/src/utils/: api.ts
workers/go/: go.mod  main.go
